Implementing add user favorite book methods in controller and service also fixing single responsabilities